[gd_scene load_steps=38 format=3 uid="uid://5lpw2byj2w0e"]

[ext_resource type="Script" uid="uid://dgk4fc0qncvrh" path="res://robot.gd" id="1_r3k15"]
[ext_resource type="Texture2D" uid="uid://dxmq4rife5tss" path="res://aseprite/ASEPRITE/boss/bossATTACK.png" id="2_e0t22"]
[ext_resource type="Texture2D" uid="uid://ck3gjhvwvptb5" path="res://aseprite/ASEPRITE/boss/bossPOWERDOWN.png" id="3_bg1ih"]
[ext_resource type="Texture2D" uid="uid://bybrymgsqpn1k" path="res://aseprite/ASEPRITE/boss/bossPOWERUP.png" id="4_q24jk"]
[ext_resource type="Texture2D" uid="uid://dn6xeqqp47bd4" path="res://aseprite/ASEPRITE/boss/bossWALK.png" id="5_ofwsy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fruwb"]
atlas = ExtResource("3_bg1ih")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsx04"]
atlas = ExtResource("3_bg1ih")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw2ga"]
atlas = ExtResource("3_bg1ih")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi3nr"]
atlas = ExtResource("4_q24jk")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fym0"]
atlas = ExtResource("4_q24jk")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iqdd"]
atlas = ExtResource("4_q24jk")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7gjv"]
atlas = ExtResource("2_e0t22")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnygv"]
atlas = ExtResource("2_e0t22")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqk0c"]
atlas = ExtResource("2_e0t22")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_83nbr"]
atlas = ExtResource("2_e0t22")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lij3x"]
atlas = ExtResource("2_e0t22")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj4mh"]
atlas = ExtResource("2_e0t22")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6srcx"]
atlas = ExtResource("2_e0t22")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu6p4"]
atlas = ExtResource("2_e0t22")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_26k05"]
atlas = ExtResource("2_e0t22")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lregr"]
atlas = ExtResource("2_e0t22")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_trjul"]
atlas = ExtResource("2_e0t22")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxb4m"]
atlas = ExtResource("2_e0t22")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1q4g"]
atlas = ExtResource("2_e0t22")
region = Rect2(3072, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0ttn"]
atlas = ExtResource("2_e0t22")
region = Rect2(3328, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfyb3"]
atlas = ExtResource("5_ofwsy")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2mhd"]
atlas = ExtResource("5_ofwsy")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv0q8"]
atlas = ExtResource("5_ofwsy")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4w0x"]
atlas = ExtResource("5_ofwsy")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lncik"]
atlas = ExtResource("5_ofwsy")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hn485"]
atlas = ExtResource("5_ofwsy")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xega"]
atlas = ExtResource("5_ofwsy")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_8dg0j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsx04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw2ga")
}],
"loop": false,
"name": &"PowerDown",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi3nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fym0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iqdd")
}],
"loop": false,
"name": &"PowerUp",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7gjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnygv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqk0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83nbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lij3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj4mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6srcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu6p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26k05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lregr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trjul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxb4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1q4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0ttn")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfyb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2mhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv0q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4w0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lncik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn485")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xega")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ru5oq"]
radius = 26.0
height = 190.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7xofo"]
radius = 41.0
height = 190.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyxj1"]
size = Vector2(141, 45)

[sub_resource type="CircleShape2D" id="CircleShape2D_e0t22"]
radius = 397.0315

[node name="BossRobot" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
script = ExtResource("1_r3k15")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-28.500006, 22.000008)
scale = Vector2(0.7773437, 0.828125)
sprite_frames = SubResource("SpriteFrames_8dg0j")
animation = &"attack"

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(-35, 34)
shape = SubResource("CapsuleShape2D_ru5oq")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-49, 33)
shape = SubResource("CapsuleShape2D_7xofo")

[node name="Hitbox1" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox1"]
position = Vector2(-76, 44)
shape = SubResource("RectangleShape2D_yyxj1")

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(-33, 42)
shape = SubResource("CircleShape2D_e0t22")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox1" to="." method="_on_hitbox_1_area_entered"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_detection_zone_area_entered"]
[connection signal="area_exited" from="DetectionZone" to="." method="_on_detection_zone_area_exited"]
